--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "bulma-portfolio",
+  "name": "pagenr",
   "version": "0.0.1",
   "description": "webpack static html page generator",
   "scripts": {
-    "dev": "NODE_ENV=development webpack --mode development",
+    "dev": "NODE_ENV=development webpack-dev-server --mode development --hot",
+    "build:dev": "NODE_ENV=development webpack --mode development",
     "build": "NODE_ENV=production webpack --mode production"
   },
   "author": "",
@@ -32,6 +33,7 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   }
 }
