--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "ejs-webpack-loader": "^2.2.2",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
+    "html5shiv": "^3.7.3",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.17.0",
+    "respond.js": "^1.4.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
