--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "webpack static html page generator",
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --mode development --hot",
+    "dev": "NODE_ENV=development node data.js && webpack-dev-server --mode development --hot",
     "build:dev": "NODE_ENV=development webpack --mode development",
     "build": "NODE_ENV=production webpack --mode production"
   },
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "^3.2.0",
     "html5shiv": "^3.7.3",
     "mini-css-extract-plugin": "^0.6.0",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
