--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
-    "ejs": "^2.6.1",
-    "ejs-webpack-loader": "^2.2.2",
+    "handlebars": "^4.5.3",
+    "handlebars-loader": "^1.7.1",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
     "html5shiv": "^3.7.3",
