--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "NODE_ENV=development node data.js && webpack-dev-server --mode development --hot",
     "build:dev": "NODE_ENV=development webpack --mode development",
-    "build": "NODE_ENV=production webpack --mode production"
+    "build": "NODE_ENV=production webpack --mode production",
+    "build:stats": "webpack --mode production --json > stats.json"
   },
   "author": "",
   "license": "ISC",
