package.json updated

--- a/examples/03-fetch-data/package.json
+++ b/examples/03-fetch-data/package.json
@@ -10,7 +10,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "mra-npm-cli-test": "^0.0.9"
+    "pagenr": "^0.1.0"
   },
   "devDependencies": {}
 }
